cfk/security/secrets-provider-integration/cfk-azure-keyvault-csi-mtls/networking/ingress-cp-bootstrap-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    platform.confluent.io/cr-name: kafka
    platform.confluent.io/namespace: confluent
    platform.confluent.io/type: kafka
    prometheus.io/port: "7778"
    prometheus.io/scrape: "true"
  name: kafka-bootstrap
  namespace: confluent 
  labels:
    confluent-platform: "true"
    cr-name: kafka
    type: kafka
spec:
  ports:
    - name: external
      port: 9092
      protocol: TCP
      targetPort: 9092
  selector:
    app: kafka
    clusterId: confluent 
    confluent-platform: "true"
    type: kafka
  sessionAffinity: None
  type: ClusterIP

---

apiVersion: v1
kind: Service
metadata:
  annotations:
    platform.confluent.io/cr-name: schemaregistry
    platform.confluent.io/namespace: confluent
    platform.confluent.io/type: schemaregistry
    prometheus.io/port: "7778"
    prometheus.io/scrape: "true"
  name: schemaregistry-bootstrap
  namespace: confluent
  labels:
    confluent-platform: "true"
    cr-name: schemaregistry
    type: schemaregistry
spec:
  ports:
    - name: external
      port: 8081
      protocol: TCP
      targetPort: 8081
  selector:
    app: schemaregistry
    clusterId: confluent
    confluent-platform: "true"
    type: schemaregistry
  sessionAffinity: None
  type: ClusterIP

---

apiVersion: v1
kind: Service
metadata:
  annotations:
    platform.confluent.io/cr-name: connect
    platform.confluent.io/namespace: confluent
    platform.confluent.io/type: connect
    prometheus.io/port: "7778"
    prometheus.io/scrape: "true"
  name: connect-bootstrap
  namespace: confluent
  labels:
    confluent-platform: "true"
    cr-name: connect
    type: connect
spec:
  ports:
    - name: external
      port: 8083
      protocol: TCP
      targetPort: 8083
  selector:
    app: connect
    clusterId: confluent
    confluent-platform: "true"
    type: connect
  sessionAffinity: None
  type: ClusterIP

---

apiVersion: v1
kind: Service
metadata:
  annotations:
    platform.confluent.io/cr-name: ksqldb
    platform.confluent.io/namespace: confluent
    platform.confluent.io/type: ksqldb
    prometheus.io/port: "7778"
    prometheus.io/scrape: "true"
  name: ksqldb-bootstrap
  namespace: confluent 
  labels:
    confluent-platform: "true"
    cr-name: ksqldb
    type: ksqldb
spec:
  ports:
    - name: external
      port: 8088
      protocol: TCP
      targetPort: 8088
  selector:
    app: ksqldb
    clusterId: confluent 
    confluent-platform: "true"
    type: ksqldb
  sessionAffinity: None
  type: ClusterIP

---

apiVersion: v1
kind: Service
metadata:
  annotations:
    platform.confluent.io/cr-name: controlcenter
    platform.confluent.io/namespace: confluent
    platform.confluent.io/type: controlcenter
    prometheus.io/port: "7778"
    prometheus.io/scrape: "true"
  name: controlcenter-bootstrap
  namespace: confluent 
  labels:
    confluent-platform: "true"
    cr-name: controlcenter
    type: controlcenter
spec:
  ports:
    - name: external
      port: 9021
      protocol: TCP
      targetPort: 9021
  selector:
    app: controlcenter
    clusterId: confluent 
    confluent-platform: "true"
    type: controlcenter
  sessionAffinity: None
  type: ClusterIP

---
